--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,7 +23,7 @@ jobs:
         run: pip install .[lint]
 
       - name: Lint Cairo code
-        run: find contracts -type f -name '*.cairo' | xargs cairo-format -c
+        run: find vyrolib -type f -name '*.cairo' | xargs cairo-format -c
 
       - name: Run Black
         run: black --check -C ./tests ./vyro ./setup.py
