--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,18 +9,25 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-
+    strategy: 
+        matrix:
+          poetry-version: ["1.2", "1.2.1", "1.2.2"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Python setup
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+      
+      - name: Run image
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
 
       - name: Install Dependencies
-        run: pip install .[test]
+        run: poetry install
 
       - name: Run tests
-        run: ape test -s
+        run: poetry run ape test -s
