--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ vyro = "vyro._cli.__main__:main"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.10"
-vyper = "^0.3.7"
+vyper = "0.3.7"
+cairo-lang = "0.10.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
@@ -21,9 +22,11 @@ isort = "^5.10.1"
 mypy = "^0.982"
 pytest = "^7.1.3"
 setuptools = "^65.4.1"
-ape-vyper = "^0.5.0"
-ape-starknet = "^0.5.0-alpha.1"
-ape-cairo = "^0.5.0-alpha.1"
+eth-ape = "0.5.5"
+ape-vyper = "0.5.2"
+ape-starknet = "0.5.0-alpha.2"
+ape-cairo = "0.5.0-alpha.2"
+web3 = {version = "6.0.0b7", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
