--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ vyro = "vyro._cli.__main__:main"
 [tool.poetry.dependencies]
 python = ">=3.9,<3.10"
 vyper = "0.3.7"
-cairo-lang = "0.10.1"
+cairo-lang = "0.10.3"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
@@ -22,10 +22,10 @@ isort = "^5.10.1"
 mypy = "^0.982"
 pytest = "^7.1.3"
 setuptools = "^65.4.1"
-eth-ape = "0.5.5"
-ape-vyper = "0.5.2"
-ape-starknet = "0.5.0-alpha.2"
-ape-cairo = "0.5.0-alpha.2"
+eth-ape = "^0.6.2"
+ape-vyper = "^0.6.1"
+ape-starknet = "^0.6.0"
+ape-cairo = "^0.6.0"
 web3 = {version = "6.0.0b7", allow-prereleases = true}
 
 [build-system]
